# rust-nuggets

./: .gitattributes  Cargo.toml  README.md
basics/: Cargo.toml
basics/examples/: enums.rs  standard.rs  structs.rs
errors/: Cargo.toml
errors/examples/: immutable_ref.rs  integer_mismatch.rs  mutex_guard_lifetime.rs  nonexhaustive_patterns.rs  recursive_struct.rs  static_trait_bound.rs  vec_ref_push.rs
html/: errors.html  output.html  regenerate  run_cargo_check
warnings/: Cargo.toml
warnings/examples/: must_use_result.rs
